--- a/README.org
+++ b/README.org
@@ -1,21 +1,21 @@
 * sexp-move
 
-  *sexp-move* is a package for [[https://www.gnu.org/software/emacs/][GNU Emacs]] that adds two interactive functions that make it easy to move forward and back through most [[https://en.wikipedia.org/wiki/Lisp_%28programming_language%29][lisp]] programming languages.
+*sexp-move* is a package for [[https://www.gnu.org/software/emacs/][GNU Emacs]] that adds two interactive functions that make it easy to move forward and back through most [[https://en.wikipedia.org/wiki/Lisp_%28programming_language%29][lisp]] programming languages.
 
 ** Raison d'être
 
-   I wrote *sexp-move* to make it easier to tab-through my code. I use [[http://emacswiki.org/emacs/ParEdit][ParEdit]] to automatically add matching parentheses, brackets, and quotation marks to my code, and I want to press /TAB/ to get out of them. However, I found inadequate the [[http://pub.gajendra.net/src/paredit-refcard.pdf][default movement commands of ParEdit]]. The command =paredit-forward= skips over the nested S-Expression /(bar baz)/. 
+I wrote *sexp-move* to make it easier to tab-through my code. I use [[http://emacswiki.org/emacs/ParEdit][ParEdit]] to automatically add matching parentheses, brackets, and quotation marks to my code, and I want to press /TAB/ to get out of them. However, I found inadequate the [[http://pub.gajendra.net/src/paredit-refcard.pdf][default movement commands of ParEdit]]. The command =paredit-forward= skips over the nested S-Expression /(bar baz)/. 
 
-    *Example:*
+*Example:*
 
-    (*NOTE:* the vertical bar (|) represents the current position of the cursor [i.e. /point/, in Emacs terminology]).
+(*NOTE:* the vertical bar (|) represents the current position of the cursor [i.e. /point/, in Emacs terminology]).
 
-    #+begin_src elisp
-    (foo| (bar baz) quux)
-    (foo (bar baz)| quux)
-    #+end_src
-   
-    ParEdit has two "undocumented" commands, =paredit-forward-down= and =paredit-forward-up= that move into and out of nested expressions, but it does not have any command to [[https://en.wikipedia.org/wiki/DWIM][do what I mean]] when traversing the code. This critique also applies to =paredit-backward=
+#+begin_src elisp
+(foo| (bar baz) quux)
+(foo (bar baz)| quux)
+#+end_src
+
+ParEdit has two "undocumented" commands, =paredit-forward-down= and =paredit-forward-up= that move into and out of nested expressions, but it does not have any command to [[https://en.wikipedia.org/wiki/DWIM][do what I mean]] when traversing the code. This critique also applies to =paredit-backward=.
 
 To fill this need, I wrote *sexp-move*.
 
@@ -23,11 +23,11 @@ To fill this need, I wrote *sexp-move*.
 
 *** MELPA
 
-    *sexp-move* is not currently available through [[https://melpa.org/#/][MELPA]]. I will add it soon!
+*sexp-move* is not currently available through [[https://melpa.org/#/][MELPA]]. I will add it soon!
 
 *** Manual
 
-    Since *sexp-move* is a single-file project, you simply have to download it and load it into Emacs. Type the following commands into a Unix shell.
+Since *sexp-move* is a single-file project, you simply have to download it and load it into Emacs. Type the following commands into a Unix shell.
 
 #+begin_src sh
 mkdir -p ~/.emacs.d/scripts
@@ -37,11 +37,11 @@ echo "(load \"~/Development/.emacs.d/scripts/sexp-move.el\")" >> ~/.emacs.d/init
     
 ** Use
 
-   Both functions, *sexp-move-forward* and *sexp-move-backward*, traverse the [[https://en.wikipedia.org/wiki/Lexeme][lexemes]] (i.e. the basic syntactical units) of lisp programming languages: parentheses, square brackets, curly brackets, double quote, single quote, grave (i.e. *`*), comma, white-space characters, and symbols (i.e. letters, numbers and other things that do not fit into the previous categories).
+Both functions, *sexp-move-forward* and *sexp-move-backward*, traverse the [[https://en.wikipedia.org/wiki/Lexeme][lexemes]] (i.e. the basic syntactical units) of lisp programming languages: parentheses, square brackets, curly brackets, double quote, single quote, grave (i.e. *`*), comma, white-space characters, and symbols (i.e. letters, numbers and other things that do not fit into the previous categories).
 
 *** sexp-move-forward
 
-    This function moves the cursor (i.e. /point/) forward one /lexeme/.
+This function moves the cursor (i.e. /point/) forward one /lexeme/.
 
 **** Example
 
@@ -129,7 +129,7 @@ echo "(load \"~/Development/.emacs.d/scripts/sexp-move.el\")" >> ~/.emacs.d/init
 
 ** Configure
    
-   Use the following code to replace the functions =forward-sexp= and =backward-sexp= with =sexp-mode-forward= and =sexp-move-backward=.
+Use the following code to replace the functions =forward-sexp= and =backward-sexp= with =sexp-mode-forward= and =sexp-move-backward=.
 
 #+begin_src elisp
 (global-set-key (kbd "C-M-f") 'sexp-move-forward)  ; Ctrl+Alt+f
